5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4365/executions/1577_1330.log
== SUBMITION (2019-03-25 23:32:55) 
-- CODE:
print(round 250/6, 2)
-- EXECUTION TIME:
0.148833
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print(round 250/6, 2)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 23:33:08) 
-- CODE:
print(round 250/6,2)
-- EXECUTION TIME:
0.128453
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print(round 250/6,2)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:34:49) 
-- CODE:
print(round (250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:35:15) 
-- CODE:
print(round (250/6,2)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 23:35:35) 
-- CODE:
print(round (250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 23:35:39) 
-- CODE:
print(round (250/6,2))
-- EXECUTION TIME:
0.14013
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
